# gospel_search

./: Cargo.toml  README.md
app/: App.js  package-lock.json  package.json
app/public/: bookofmormon.json  doctrineandcovenants.json  index.html  pearlofgreatprice.json
app/src/: App.js  SearchTable.js  index.css
pkg/: README.md  gospel_search.d.ts  gospel_search.js  gospel_search_bg.wasm  gospel_search_bg.wasm.d.ts  package.json
src/: lib.rs
