[package]
name = "gospel_search"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.11.1"
wasm-bindgen-futures = "0.4.50"
serde-wasm-bindgen = "0.6.5"
